Fix storage of matched transaction containing a the character <

A problem occured if a matched transaction contained the character 'less
than' (<). This change eliminates this problem. It does not affect
already stored transasction which have to be modified manually.

BUG: 415548
FIXED-IN: 5.0.8